2007-03-20  Rodney Dawes  <dobey@novell.com>

	* scripts/evolution-webcal.py: Add a script for evolution-webcal

2007-03-20  Rodney Dawes  <dobey@novell.com>

	* scripts/banshee.py: Up the initial sleep to 20 seconds

2007-02-27  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py (a11y_test_init): Update the argument checks
	to handle values of None, '', or 0

	* scripts/realplay.py: Update script to handle initial setup dialogs,
	by copying the existin realplayerrc to a backup, and back when finished

2007-02-26  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py (a11y_test_init): Add another argument to
	the method to allow specifying a different logfile name

2007-02-21  Rodney Dawes  <dobey@novell.com>

	* scripts/yelp.py: Document how the script works, to aid people in
	writing new scripts

2006-12-07  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 2.15.2 for release

2006-11-22  Rodney Dawes  <dobey@novell.com>

	* scripts/gedit.py: Update to work with gedit 2.16.x

2006-11-22  Rodney Dawes  <dobey@novell.com>

	* scripts/banshee.py: Update to work with banshee 0.11.2 as well

2006-11-09  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py (a11y_find_panel_with_applet): Add a new
	method to search for a specific applet in all available panels, this
	probably breaks for multiple applets of the same type, but works great
	for single applet instances

	* scripts/applet-show-desktop.py:
	* scripts/applet-volume-control.py:
	Add two new scripts to attempt to poke at a couple applets

	* scripts/gnome-panel.py: Scan all the panels that might exist

2006-10-30  Rodney Dawes  <dobey@novell.com>

	* scripts/Makefile.am: Add gnome-main-menu.py

	* scripts/control-center.py: Clean up a little bit

	* scripts/gnome-background-properties.py: Use the new objectexist()
	call from LDTP CVS to push the right button to close the dialog

	* scripts/gnome-main-menu.py: New script to test the main menu applet