@@ -1,5 +1,9 @@
 2007-03-20  Rodney Dawes  <dobey@novell.com>
 
+	* scripts/abiword.py: Add an initial script for abiword
+
+2007-03-20  Rodney Dawes  <dobey@novell.com>
+
 	* scripts/evolution-webcal.py: Add a script for evolution-webcal
 
 2007-03-20  Rodney Dawes  <dobey@novell.com>
